gobmkida/c2/search_persistent_owl_cache
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/search_persistent_owl_cache/src/engine/persistent.c:1191:25: error: use of undeclared identifier 'byte_9B389C'
v14 = ( unsigned __int8)byte_9B389C[i]; 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/search_persistent_owl_cache/src/obj/1/persistent.o] Error 1
